<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#f4eeec">
    <TextView
        android:id="@+id/taskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_id"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/taskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_status"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#de1e7e"
        android:padding="15dp"
        android:text="@string/date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/title" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/description"
            android:padding="15dp"/>

        <ImageView
            android:id="@+id/status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/incomplete"
            android:clickable="true"
            android:contentDescription="@string/incomplete_task"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:focusable="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/timeStamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/date"
        android:padding="15dp" />
</LinearLayout>